I added a login button

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 							remaining essentially unchanged.
 						</p>
 						<button>Register</button>
+						<button class="btn">Login</button>
+
 					</div>
 				</div>
 			</div>
